add backend enpoints to frontend

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-# See `.env.development` and `.env.production` for default API targets per environment.
-# Override here only if you need a custom setup.
-# VITE_API_URL=https://your-backend.example.com/api
+# Default API base (Vercel backend)
+VITE_API_URL=https://nitbackend.vercel.app/api
 
 VITE_EMAILJS_SERVICE_ID=
 VITE_EMAILJS_TEMPLATE_ID=
