--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ai": "^5.0.87",
     "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
+    "jquery": "^3.7.1",
     "lucide-react": "^0.552.0",
     "openai": "^6.8.1",
     "prop-types": "^15.8.1",
@@ -21,7 +22,8 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
