--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.1",
     "framer-motion": "^12.23.24",
     "jquery": "^3.7.1",
+    "jquery.ripples": "^0.6.3",
     "lucide-react": "^0.552.0",
     "openai": "^6.8.1",
     "prop-types": "^15.8.1",
@@ -23,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.5",
+    "react-toastify": "^11.0.5",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
